[package]
name = "compak"
description = "A high level library for archive management"
version = "0.0.2"
edition = "2024"
license = "MIT"
authors = ["Rabindra Dhakal <contact@qaidvoid.dev>"]
repository = "https://github.com/QaidVoid/compak"

[dependencies]
bzip2 = "0.6.0"
flate2 = { version = "1.1.2" }
sevenz-rust2 = "0.19.2"
tar = "0.4.44"
xz2 = "0.1.7"
zip = { version = "4.1.0", default-features = false, features = ["time", "aes-crypto"] }
zstd = "0.13.3"
