[package]
name = "compak"
description = "A high level library for archive management"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Rabindra Dhakal <contact@qaidvoid.dev>"]
repository = "https://github.com/QaidVoid/compak"

[dependencies]
bzip2 = "0.6.1"
flate2 = { version = "1.1.5" }
sevenz-rust2 = "0.20.0"
tar = "0.4.44"
liblzma = "0.4.5"
zip = { version = "7.0.0", default-features = false, features = ["time", "aes-crypto"] }
zstd = "0.13.3"
